# ExtremeWeatherBench

./: .gitattributes  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  DOCSTRING_CHANGES.md  FUTURE_CLEANUP.md  Justfile  LICENSE  Makefile  PR_CLEANUP_SUMMARY.md  README.md  generate_heatwave_data.ipynb  heatwave_evaluation_results.csv  heatwave_metrics.ipynb  heatwave_metrics_obs.ipynb  heatwave_metrics_obs_final.ipynb  heatwave_pnw_stepthrough.ipynb  heatwave_stepthrough.ipynb  mkdocs.yml  pnw_heatwave_pangu.ipynb  pyproject.toml  pytest.ini  quick-start.ipynb  run_comprehensive_evaluation.py  test_progress.py  test_workflow.ipynb  test_yaml.ipynb
.github/: pull_request_template.md
.github/workflows/: ci.yaml  miniaturized-tests.yaml  publish.yaml  run-pre-commit.yaml  run-tests.yaml
.ipynb_checkpoints/: pnw_heatwave_pangu-checkpoint.ipynb
assets/case-studies/: AllCaseStudies.md
assets/data/: KSEA_event.csv  asos_pangu.csv  events.yaml  ksea_graphcast.csv
assets/json/: 2024061500_.json  2024061512_.json  2024061600_.json  2024061612_.json  2024061700_.json  2024061712_.json  2024061800_.json  2024061812_.json  2024061900_.json  2024061912_.json  2024062000_.json  2024062012_.json  2024062100_.json  2024062112_.json  2024062200_.json  2024062212_.json  2024062300_.json  2024062312_.json  2024062400_.json  2024062412_.json  2024062500_.json  2024062512_.json  2024062600_.json  2024062612_.json  2024062700_.json  2024062712_.json  2024062800_.json  2024062812_.json  2024062900_.json  2024062912_.json  2024063000_.json  2024063012_.json  2024070100_.json  2024070112_.json  2024070200_.json  2024070212_.json  2024070300_.json  2024070312_.json  PANG_2021062100_.json  PANG_2021062112_.json  (+3 more)
data_prep/: animate_heat_cold_global.py  ar_bounds.py  australia_lsr_to_spc_lsr.py  canada_lsr_to_spc_lsr.py  cira_icechunk_generation.py  climatology_to_icechunk.py  combined_lsr_processing.py  convert_to_kerchunk.py  download_and_process_isd.py  era5_climatology.py  generate_cape_reference_data.py  generate_cira_icechunk_store.py  generate_ghcn.py  generate_ghcnh.py  generate_ghcnh_all_clean.py  generate_ghcnh_streaming.py  generate_lsr.py  generate_percentile_climatology.py  heat_cold_bounds_case.py  heat_cold_bounds_global.py  heat_freeze_bounds_case.py  heat_freeze_bounds_global.py  heat_freeze_bounds_yaml.py  ibtracs_bounds.py  ibtracs_to_zarr.py  mlwp_archive_json_creator.ipynb  plot_consecutive_freeze_days.py  plot_consecutive_heatwave_days.py  plot_temperature_events.py  practically_perfect_hindcast_from_lsr.py  prepare_isd.py  run_climatology_sentinel.py  severe_convection_bounds.py  subset_heat_cold_events.py  temp_bounds.py  temperature_bounds_global.py  temperature_events.py
dev/: applied_ewb_refactor_ghcn.py  applied_ewb_refactor_multiple_event.py  applied_ewb_refactor_simple.py  applied_ewb_refactor_simple_parallel.py  applied_ewb_refactor_tc.py  atmospheric_river_basic.ipynb  concrete_refactor_script.py  ewb_obs_event_refactor_workflow.ipynb  freeze_basic.ipynb  heatwave_basic.ipynb  refactor_scripts.py  sample_walkthrough_script.py  sample_walkthrough_script_new_event.py  severe_convection_basic.ipynb  tc_apply_ufunc.ipynb  translation.py  translation_light.py  translation_pseudocode.ipynb  tropical_cyclone_basic.ipynb
docs/: AllCaseStudies.md  AtmosphericRivers.md  CaseStudyYamlDetails.md  ConvectiveWx.md  Derechos.md  FreezeEvents.md  Hailstorms.md  Heatwaves.md  SevereBustDays.md  SnowEvents.md  TCFloods.md  TCTornadoOutbreaks.md  cookbook.md  data.md  data_prep.md  index.md  installation.md  parallelism.md  requirements.txt  usage.md
docs/_static/: custom.css
docs/events/: AllCaseStudies.md  AtmosphericRivers.md  ConvectiveWx.md  Derechos.md  Flooding.md  FreezeEvents.md  Heatwaves.md  OtherFloods.md  PlannedEventTypes.md  TCFloods.md  TCTornadoOutbreaks.md  TornadoOutbreaks.md  TropicalCyclones.md  WindEvents.md  WinterWeather.md  atmospheric_rivers.md  case_studies.md  cold_snaps.md  heat_waves.md  planned_events.md  severe_convection.md  tropical_cyclones.md
docs/examples/: applied_ar.py  applied_ar_future_metrics.py  applied_freeze.py  applied_freeze_parallel.py  applied_ghcn.py  applied_heatwave.py  applied_heatwave_parallel.py  applied_severe.py  applied_tc.py  config.yaml  example_config.py
docs/javascripts/: katex.js
docs/notebooks/: atmospheric_rivers_figures.ipynb  australia_data_clean.ipynb  calc.py  canada_data_clean.ipynb  case_plotting.py  craven_sigsvr_aus.ipynb  craven_sigsvr_canada.ipynb  derived.py  figure1.ipynb  figure1.py  figure1_show_all_cases.ipynb  figure2.ipynb  figure2_part2.ipynb  figure2_part2_freezes.ipynb  (+52 more)
experimental/: calculate_freeze_climatology.ipynb  calculate_heat_climatology_old.ipynb  cape_reverse_engineer.ipynb  freeze_case_derivation.ipynb  plot_case_pkls.ipynb  plot_events.ipynb  sample_notebook.ipynb  severe_days.ipynb  test_fss.ipynb  test_point_obs.ipynb
notebooks/: cira_forecast.ipynb  evaluate_recent_tropical_cyclones.ipynb  multi_model_evaluation.ipynb  near_real_time_point_observations.ipynb  one_forecast_two_targets.ipynb  single_case.ipynb  your_own_forecast.ipynb  your_own_metrics.ipynb  your_own_target.ipynb  your_own_variable.ipynb
scripts/: brightband_evaluation.py  run_brightband_evaluation.py  test_heatwave_basic.py  validate_events_yaml.py
site/: 404.html  index.html  objects.inv  sitemap.xml
src/: core.py  io.py  test_utils.py  utils.py
tests/: conftest.py  test_atmospheric_river.py  test_calc.py  test_cape.py  test_case.py  test_cases.py  test_data_loader.py  test_datasets.py  test_defaults.py  test_derived.py  test_evaluate.py  test_evaluate_cli.py  test_evaluate_tools.py  test_golden.py  test_heat_cold_detection.py  test_heat_freeze_detection.py  test_heat_freeze_integration.py  test_init.py  test_inputs.py  test_integration.py  test_metric_parallelization.py  test_metrics.py  test_observations.py  test_region.py  test_regions.py  test_severe_convection.py  test_sources.py  test_threadsafe_dict.py  test_tropical_cyclone.py  test_utils.py  test_variable_pairing_integration.py
(+606 files in other folders)
